// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HighContrastSettings renders with enabled = false 1`] = `
<DocumentFragment>
  <mock-generictoggle
    description="[object Object]"
    enabled="false"
    id="enable-high-contrast-mode"
    name="Enable high contrast"
  />
</DocumentFragment>
`;

exports[`HighContrastSettings renders with enabled = true 1`] = `
<DocumentFragment>
  <mock-generictoggle
    description="[object Object]"
    enabled="true"
    id="enable-high-contrast-mode"
    name="Enable high contrast"
  />
</DocumentFragment>
`;
